# A-Flask-Project

./: .flaskenv  Dockerfile  README.md  app.db  boot.sh  config.py  docker-compose.yml  manager.py  microblog.py  pyproject.toml  tests.py
app/: __init__.py  errors.py  forms.py  models.py  routes.py  search.py
app/auth/: email.py
app/errors/: __init__.py
app/main/: routes.py
app/templates/: 404.html  _post.html  base.html  edit_profile.html  index.html  user.html
app/templates/errors/: 404.html
application/: __init__.py  extensions.py
migrations/versions/: 2e3e164debf5_add_language_to_posts.py  5dc7c1191ce8_.py  9cbbee9b9c22_new_fields_in_user_mode.py  af73ff17ddb6_.py  bbb257ab58f2_followers.py
